@@ -3,3 +3,4 @@ lxml==3.5.0
 click==6.2
 requests==2.12.1
 mistune==0.7.3
+beautifulsoup4==4.5.1
